test/errors/modify_non_lval.correct
error: modify_non_lval.li:1:1: expected a modifiable expression
│ 10--;
│ ~~
│ ^
